# project2_pahmutov_dmitry_M25_555

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
